# Beatsy

./: CMakeLists.txt  Camera.h  FFT.h  ObjLoader.h  README.md  Shader.h  Texture.h  Utils.h  VBOIndexer.h  WindowWrapper.h  main.cpp
config/: const.json  default.json  fade.json  lines.json
include/: Audio.h  Camera.h  Colors.h  Config.h  FFT.h  ObjLoader.h  Shader.h  Texture.h  Utils.h  VBOIndexer.h  WindowWrapper.h
shaders/: fragment.frag  screen.frag  screen.vert  screen_blur.frag  vertex.vert
src/: Audio.cpp  Camera.cpp  FFT.cpp  ObjLoader.cpp  Shader.cpp  Texture.cpp  Utils.cpp  VBOIndexer.cpp  WindowWrapper.cpp
